--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@rainbow-me/rainbowkit": "^0.4.2",
+    "daisyui": "^2.22.0",
     "ethers": "^5.6.9",
     "next": "12.1.6",
     "react": "^18.2.0",
